cgo/include/urnetwork_sdk.h

/* BlockActionStatsListener */
typedef void (*urnet_block_action_stats_cb)(void* user_data);
/* BlockActionsListener */
typedef void (*urnet_block_actions_cb)(void* user_data);
/* CommitCallback */
typedef void (*urnet_commit_cb)(void* user_data, bool success);
/* ConnectionStatusListener */
typedef void (*urnet_connection_status_cb)(void* user_data);
/* GetByClientJwtCallback */
typedef void (*urnet_get_by_client_jwt_cb)(void* user_data, const char* result, bool ok_param);
/* GetByJwtCallback */
typedef void (*urnet_get_by_jwt_cb)(void* user_data, const char* result, bool ok_param);
/* GetInstanceIdCallback */
typedef void (*urnet_get_instance_id_cb)(void* user_data, const char* result, bool ok_param);
/* GridListener */
typedef void (*urnet_grid_cb)(void* user_data);
/* LocalOverrideAppIdsListener */
typedef void (*urnet_local_override_app_ids_cb)(void* user_data);
/* ParseByJwtCallback */
typedef void (*urnet_parse_by_jwt_cb)(void* user_data, const char* result_json, bool ok_param);
/* SelectedLocationListener */
typedef void (*urnet_selected_location_cb)(void* user_data, const char* location_json);
/* SubscriptionBalanceCallback */
typedef void (*urnet_subscription_balance_cb)(void* user_data, const char* result_json, const char* err_param);
/* SubscriptionCreatePaymentIdCallback */
typedef void (*urnet_subscription_create_payment_id_cb)(void* user_data, const char* result_json, const char* err_param);
/* UnlinkReferralNetworkCallback */
typedef void (*urnet_unlink_referral_network_cb)(void* user_data, const char* result_json, const char* err_param);
/* UpgradeGuestCallback */
typedef void (*urnet_upgrade_guest_cb)(void* user_data, const char* result_json, const char* err_param);
/* UpgradeGuestExistingCallback */
typedef void (*urnet_upgrade_guest_existing_cb)(void* user_data, const char* result_json, const char* err_param);
/* ValidateReferralCodeCallback */
typedef void (*urnet_validate_referral_code_cb)(void* user_data, const char* result_json, const char* err_param);
/* VerifyAppleTransactionCallback */
typedef void (*urnet_verify_apple_transaction_cb)(void* user_data, const char* result_json, const char* err_param);
/* VerifyPlayPurchaseCallback */
typedef void (*urnet_verify_play_purchase_cb)(void* user_data, const char* result_json, const char* err_param);
/* VerifySeekerNftHolderCallback */
typedef void (*urnet_verify_seeker_nft_holder_cb)(void* user_data, const char* result_json, const char* err_param);
/* WalletBalanceCallback */
typedef void (*urnet_wallet_balance_cb)(void* user_data, const char* result_json, const char* err_param);
/* WalletCircleInitCallback */
typedef void (*urnet_wallet_circle_init_cb)(void* user_data, const char* result_json, const char* err_param);
/* WalletCircleTransferOutCallback */
typedef void (*urnet_wallet_circle_transfer_out_cb)(void* user_data, const char* result_json, const char* err_param);
/* WalletValidateAddressCallback */
typedef void (*urnet_wallet_validate_address_cb)(void* user_data, const char* result_json, const char* err_param);
void urnet_api_subscription_balance_for_storefront(uint64_t self, const char* storefront_country, urnet_subscription_balance_cb callback_result, void* callback_user_data);
void urnet_api_subscription_create_payment_id(uint64_t self, const char* create_payment_id_json, urnet_subscription_create_payment_id_cb callback_result, void* callback_user_data);
void urnet_api_unlink_referral_network(uint64_t self, urnet_unlink_referral_network_cb callback_result, void* callback_user_data);
void urnet_api_upgrade_guest(uint64_t self, const char* upgrade_guest_json, urnet_upgrade_guest_cb callback_result, void* callback_user_data);
void urnet_api_upgrade_guest_existing(uint64_t self, const char* upgrade_guest_json, urnet_upgrade_guest_existing_cb callback_result, void* callback_user_data);
void urnet_api_validate_referral_code(uint64_t self, const char* validate_referral_code_json, urnet_validate_referral_code_cb callback_result, void* callback_user_data);
void urnet_api_verify_apple_transaction(uint64_t self, const char* args_json, urnet_verify_apple_transaction_cb callback_result, void* callback_user_data);
char* urnet_api_verify_apple_transaction_sync(uint64_t self, const char* args_json, char** out_error);
char* urnet_api_verify_keys_sync(uint64_t self, char** out_error);
void urnet_api_verify_play_purchase(uint64_t self, const char* args_json, urnet_verify_play_purchase_cb callback_result, void* callback_user_data);
char* urnet_api_verify_play_purchase_sync(uint64_t self, const char* args_json, char** out_error);
void urnet_api_verify_seeker_holder(uint64_t self, const char* verify_json, urnet_verify_seeker_nft_holder_cb callback_result, void* callback_user_data);
void urnet_api_wallet_balance(uint64_t self, urnet_wallet_balance_cb callback_result, void* callback_user_data);
void urnet_api_wallet_circle_init(uint64_t self, urnet_wallet_circle_init_cb callback_result, void* callback_user_data);
void urnet_api_wallet_circle_transfer_out(uint64_t self, const char* wallet_circle_transfer_out_json, urnet_wallet_circle_transfer_out_cb callback_result, void* callback_user_data);
void urnet_api_wallet_validate_address(uint64_t self, const char* wallet_validate_address_json, urnet_wallet_validate_address_cb callback_result, void* callback_user_data);
/* ----- AsyncLocalState ----- */

void urnet_async_local_state_close(uint64_t self);
void urnet_async_local_state_get_by_client_jwt(uint64_t self, urnet_get_by_client_jwt_cb callback_result, void* callback_user_data);
void urnet_async_local_state_get_by_jwt(uint64_t self, urnet_get_by_jwt_cb callback_result, void* callback_user_data);
void urnet_async_local_state_get_instance_id(uint64_t self, urnet_get_instance_id_cb callback_result, void* callback_user_data);
uint64_t urnet_async_local_state_get_local_state(uint64_t self);
void urnet_async_local_state_logout(uint64_t self, urnet_commit_cb callback_complete, void* callback_user_data);
void urnet_async_local_state_parse_by_jwt(uint64_t self, urnet_parse_by_jwt_cb callback_result, void* callback_user_data);
void urnet_async_local_state_set_by_client_jwt(uint64_t self, const char* by_client_jwt, urnet_commit_cb callback_complete, void* callback_user_data);
void urnet_async_local_state_set_by_jwt(uint64_t self, const char* by_jwt, urnet_commit_cb callback_complete, void* callback_user_data);
/* ----- BlockActionViewController ----- */

uint64_t urnet_block_action_view_controller_add_block_action_stats_listener(uint64_t self, urnet_block_action_stats_cb listener_block_action_stats_changed, void* listener_user_data);
uint64_t urnet_block_action_view_controller_add_block_actions_listener(uint64_t self, urnet_block_actions_cb listener_block_actions_changed, void* listener_user_data);
uint64_t urnet_block_action_view_controller_add_local_override_app_ids_listener(uint64_t self, urnet_local_override_app_ids_cb listener_local_override_app_ids_changed, void* listener_user_data);
void urnet_block_action_view_controller_block_action_overrides_changed(uint64_t self, const char* block_action_overrides_json);
void urnet_block_action_view_controller_block_action_window_changed(uint64_t self, const char* block_action_window_json);
void urnet_block_action_view_controller_block_stats_changed(uint64_t self, const char* block_stats_json);
void urnet_block_action_view_controller_close(uint64_t self);
char* urnet_block_action_view_controller_get_block_actions(uint64_t self);
char* urnet_block_action_view_controller_get_block_stats(uint64_t self);
char* urnet_block_action_view_controller_get_local_override_app_ids(uint64_t self);
int64_t urnet_block_action_view_controller_get_max_block_actions(uint64_t self);
int64_t urnet_block_action_view_controller_get_window_duration_seconds(uint64_t self);
void urnet_block_action_view_controller_set_max_block_actions(uint64_t self, int64_t max_block_actions);
void urnet_block_action_view_controller_set_window_duration_seconds(uint64_t self, int64_t seconds);
void urnet_block_action_view_controller_start(uint64_t self);
void urnet_block_action_view_controller_stop(uint64_t self);
/* ----- ClientEventQueue ----- */

void urnet_client_event_queue_add(uint64_t self, const char* event_json);
void urnet_client_event_queue_add_all(uint64_t self, const char* events_json);
void urnet_client_event_queue_close(uint64_t self);
void urnet_client_event_queue_flush(uint64_t self);
void urnet_client_event_queue_flush_and_wait(uint64_t self, int64_t timeout_millis);
char* urnet_client_event_queue_get_session(uint64_t self);
void urnet_client_event_queue_new_session(uint64_t self);
int64_t urnet_client_event_queue_pending_count(uint64_t self);
void urnet_client_event_queue_set_app_version(uint64_t self, const char* app_version);
void urnet_client_event_queue_set_locale(uint64_t self, const char* locale);
/* ----- ConnectGrid ----- */

int64_t urnet_connect_grid_get_height(uint64_t self);
char* urnet_connect_grid_get_provider_grid_point_by_client_id(uint64_t self, const char* client_id);
char* urnet_connect_grid_get_provider_grid_point_list(uint64_t self);
int64_t urnet_connect_grid_get_width(uint64_t self);
int64_t urnet_connect_grid_get_window_current_size(uint64_t self);
int64_t urnet_connect_grid_get_window_target_size(uint64_t self);
/* ----- ConnectViewController ----- */

uint64_t urnet_connect_view_controller_add_connection_status_listener(uint64_t self, urnet_connection_status_cb listener_connection_status_changed, void* listener_user_data);
uint64_t urnet_connect_view_controller_add_grid_listener(uint64_t self, urnet_grid_cb listener_grid_changed, void* listener_user_data);
uint64_t urnet_connect_view_controller_add_selected_location_listener(uint64_t self, urnet_selected_location_cb listener_selected_location_changed, void* listener_user_data);
void urnet_connect_view_controller_close(uint64_t self);
void urnet_connect_view_controller_connect(uint64_t self, const char* location_json);