csharp/Raw.g.cs

  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_subscription_balance_for_storefront(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_subscription_balance_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_subscription_create_payment_id(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_subscription_create_payment_id_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_unlink_referral_network(ulong a0, urnet_unlink_referral_network_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_upgrade_guest(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_upgrade_guest_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_upgrade_guest_existing(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_upgrade_guest_existing_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_validate_referral_code(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_validate_referral_code_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_verify_apple_transaction(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_verify_apple_transaction_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_api_verify_apple_transaction_sync(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, out IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_api_verify_keys_sync(ulong a0, out IntPtr a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_verify_play_purchase(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_verify_play_purchase_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_api_verify_play_purchase_sync(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, out IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_verify_seeker_holder(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_verify_seeker_nft_holder_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_wallet_balance(ulong a0, urnet_wallet_balance_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_wallet_circle_init(ulong a0, urnet_wallet_circle_init_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_wallet_circle_transfer_out(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_wallet_circle_transfer_out_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_wallet_validate_address(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_wallet_validate_address_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_async_local_state_close(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_async_local_state_get_by_client_jwt(ulong a0, urnet_get_by_client_jwt_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_async_local_state_get_by_jwt(ulong a0, urnet_get_by_jwt_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_async_local_state_get_instance_id(ulong a0, urnet_get_instance_id_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_async_local_state_get_local_state(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_async_local_state_logout(ulong a0, urnet_commit_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_async_local_state_parse_by_jwt(ulong a0, urnet_parse_by_jwt_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_async_local_state_set_by_client_jwt(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_commit_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_async_local_state_set_by_jwt(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_commit_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_block_action_view_controller_add_block_action_stats_listener(ulong a0, urnet_block_action_stats_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_block_action_view_controller_add_block_actions_listener(ulong a0, urnet_block_actions_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_block_action_view_controller_add_local_override_app_ids_listener(ulong a0, urnet_local_override_app_ids_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_block_action_view_controller_block_action_overrides_changed(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_block_action_view_controller_block_action_window_changed(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_block_action_view_controller_block_stats_changed(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_block_action_view_controller_close(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_block_action_view_controller_get_block_actions(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_block_action_view_controller_get_block_stats(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_block_action_view_controller_get_local_override_app_ids(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern long urnet_block_action_view_controller_get_max_block_actions(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern long urnet_block_action_view_controller_get_window_duration_seconds(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_block_action_view_controller_set_max_block_actions(ulong a0, long a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_block_action_view_controller_set_window_duration_seconds(ulong a0, long a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_block_action_view_controller_start(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_block_action_view_controller_stop(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_client_event_queue_add(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_client_event_queue_add_all(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_client_event_queue_close(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_client_event_queue_flush(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_client_event_queue_flush_and_wait(ulong a0, long a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_client_event_queue_get_session(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_client_event_queue_new_session(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern long urnet_client_event_queue_pending_count(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_client_event_queue_set_app_version(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_client_event_queue_set_locale(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern long urnet_connect_grid_get_height(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_connect_grid_get_provider_grid_point_by_client_id(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_connect_grid_get_provider_grid_point_list(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern long urnet_connect_grid_get_width(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern long urnet_connect_grid_get_window_current_size(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern long urnet_connect_grid_get_window_target_size(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_connect_view_controller_add_connection_status_listener(ulong a0, urnet_connection_status_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_connect_view_controller_add_grid_listener(ulong a0, urnet_grid_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_connect_view_controller_add_selected_location_listener(ulong a0, urnet_selected_location_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_connect_view_controller_close(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_connect_view_controller_connect(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
